Bug 494969 - Rsync error when doing a synchronized (rsync) backup from internal NTFS HDD to external exFAT USB HDD.
Summary: Rsync error when doing a synchronized (rsync) backup from internal NTFS HDD t...
Status: RESOLVED FIXED
Alias: None
Product: kup
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9.1
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Simon Persson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-18 04:44 UTC by Stéphane Tremblay
Modified: 2025-06-30 12:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Tremblay 2024-10-18 04:44:56 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY

I recently wiped Windows from my main SSD to install Kubuntu 24.04, but kept my 1TB "D:" drive intact with all my data, documents, photos, etc. The "D:" drive is formatted in NTFS, mounted as fuseblk. I have an external 8TB USB HDD that's formatted as exFAT that I use as a backup device.

In KDE's system settings, I configured a Synchronized Backup to save my "D:" drive contents to the external HDD every 1 week with confirmation.

When the backup is executed, it finishes with errors. A popup message appears saying the backup failed. Opening the log of the backup, this is what I see. Basically the rsync error is the same error for every single file. There are no other kinds of errors.

------------------------------------
Kup is starting rsync backup job at Friday, October 18, 2024 12:07:40 A.M. EDT
rsync "-avX" "--delete-excluded" "--delete-before" "--info=progress2" "--exclude" "/Data/$RECYCLE.BIN" "--exclude" "/Data/.Trash-1000" "--exclude" "/Data/Other" "/media/stephane/Data" "/media/stephane/8TB_Backup/Data Drive Backup"
...
rsync: [receiver] rsync_xal_set: lsetxattr("/media/stephane/8TB_Backup/Data Drive Backup/Data/Pictures/Vacances/IMG_20190207_175852.jpg","user.Zone.Identifier") failed: Operation not supported (95)
...
rsync error: some files/attrs were not transferred (see previous errors) (code 23) at main.c(1338) [sender=3.2.7]

Exit code: 23
Kup did not successfully complete the rsync backup job.
------------------------------------

STEPS TO REPRODUCE
1. Add a new plan
2. In Backup Type, select Synchronized Backup and write any description in the Description text box.
3. In Sources, select a folder on an NTFS(fuseblk) filesystem.
4. In Destination, select a folder on an exFAT filesystem
5. In Schedule, select Interval with a 1 weeks interval and check the "Ask for confirmation before saving backup" checkbox.
6. In Advanced, check the "Show hidden folders in source selection" checkbox.
7. Click Apply
8. In the system tray, open the Backup Status popup.
9. Click the Save New Backup button for the backup plan we just created.
10. Wait for the backup to finis executing

OBSERVED RESULT

After the backup completes, a popup appears saying "Saving of Backup Failed - Failed to save backup. See log file for more details.

Clicking on "Show log files" displays the log file in an editor with errors like in the example above.

However, the files appear to have been synchronized properly and appear in the backup destination.

The Kup popup will keep appearing saying the backup hasn't been successfully performed in 'X' days when in fact it has been performed.

EXPECTED RESULT

The backup completes without saying the backup failed, but instead provides a warning that some attributes may not have been transferred.

SOFTWARE/OS VERSIONS
(available in the Info Center app, or by running `kinfo` in a terminal window)
Operating System: Kubuntu 24.04
KDE Plasma Version: 5.27.11
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.13
Kernel Version: 6.8.0-45-generic (64-bit)

ADDITIONAL INFORMATION

Maybe add some extra checkboxes in the advanced section to select if we want to sync user/group/permissions, etc.
Comment 1 Simon Persson 2025-06-27 02:08:41 UTC
Git commit 29a904bf5e644c9903922452b8c6c920f67388ef by Simon Persson.
Committed on 27/06/2025 at 02:08.
Pushed by persson into branch 'xattrs-fat-fs'.

Change rsync behavior on FAT destinations

This changes behavior to not try saving symlinks, permissions or
extended attributes to FAT type file systems, since they don't support
it. User has already been warned about this when creating the backup
plan.

M  +24   -1    daemon/rsyncjob.cpp
M  +1    -0    daemon/rsyncjob.h

https://invent.kde.org/system/kup/-/commit/29a904bf5e644c9903922452b8c6c920f67388ef
Comment 2 Simon Persson 2025-06-30 12:56:46 UTC
Git commit 060606552f00021dbadee31be7d6a072fb22f708 by Simon Persson.
Committed on 30/06/2025 at 12:51.
Pushed by persson into branch 'master'.

Change rsync behavior on FAT destinations

This changes behavior to not try saving symlinks, permissions or
extended attributes to FAT type file systems, since they don't support
it. User has already been warned about this when creating the backup
plan.

M  +24   -1    daemon/rsyncjob.cpp
M  +1    -0    daemon/rsyncjob.h

https://invent.kde.org/system/kup/-/commit/060606552f00021dbadee31be7d6a072fb22f708