Change rsync behavior on FAT destinations

This changes behavior to not try saving symlinks, permissions or
extended attributes to FAT type file systems, since they don't support
it. User has already been warned about this when creating the backup
plan.

BUG: 494969